USAGOV-1800-select-all-spacing: Fix breakpoints for switching button layout to be consistent with size of buttons shown.

--- a/web/themes/custom/usagov/sass/_benefit-search.scss
+++ b/web/themes/custom/usagov/sass/_benefit-search.scss
@@ -92,7 +92,7 @@ main[data-pagetype="Benefits Category Search"] .usa-prose > p {
 
   @include u-width('full');
 
-  @include at-media('tablet') {
+  @include at-media('tablet-lg') {
     width: fit-content;
     @include u-margin-bottom(0);
   }
